@@ -7,7 +7,7 @@
 %     param(handle => flash('handle_or_email'));
 %   };
     <fieldset>
-    %= form_for 'login', class => 'login', begin
+    %= form_for 'login', 'accept-charset' => 'utf-8', class => 'login', begin
       <legend><span><%= loc 'login' %></span></legend>
       %= csrf_field
       %= text_field 'handle', placeholder => loc('username')
