@@ -43,6 +43,8 @@
         - Support default values for state.
         - Introduce state manager (#119).
         - Support default value for plugin toggle embeddings.
+        - Fix wrong handling of utf8 input in login that can
+          lead to server crash.
 
 0.42 2021-06-18
         - Added GitHub based CI for perl.
